--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <meta name="author" content=" FILL ME IN ">
     <title>Cameron Pittman: Portfolio</title>
 
-    <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
-
     <style>
       html {
         font-size: 100%;
@@ -66,7 +63,7 @@ footer span { float: right; font-style: italic; }
 
   <body>
     <header>
-      <a href="/"><img src="img/profilepic.jpg"></a>
+      <a href="/"><img src="img/profilepic.webp"></a>
       <p>Cameron Pittman<br><span>Course Developer</span></p>
     </header>
 
@@ -96,7 +93,7 @@ footer span { float: right; font-style: italic; }
           </li>
 
           <li>
-            <img style="width: 100px;" src="views/images/pizzeria.jpg">
+            <img style="width: 100px;" src="views/images/pizzeria.webp">
             <a href="views/pizza.html">Cam's Pizzeria</a>
             <p>Who wants a performant pizza?</p>
           </li>
